# calyx

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-static.sh
cmake/: DetectCompiler.cmake  StaticDeps.cmake
include/: application.hpp  cli_renderer.hpp  color.hpp  config.hpp  disk_benchmark.hpp  file_descriptor.hpp  http_client.hpp  http_context.hpp  interrupts.hpp  progress_style.hpp  results.hpp  shell_pipe.hpp  speed_test.hpp  system_info.hpp  tgz_extractor.hpp  utils.hpp
src/app/: application.cpp  main.cpp
src/core/: interrupts.cpp  tgz_extractor.cpp  utils.cpp
src/io/: disk_benchmark.cpp
src/net/: http_client.cpp  http_context.cpp  speed_test.cpp
src/os/: file_descriptor.cpp  shell_pipe.cpp
src/system/: cpu_info.cpp  os_info.cpp  storage_info.cpp  system_info.cpp
src/ui/: cli_renderer.cpp
